dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/cgitelnet_msg.cgi.c)
AM_INIT_AUTOMAKE(cgitelnet, 0.1.0-PROOF-OF-CONCEPT)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(select)

AC_CONFIG_SUBDIRS(support/libxml)

AC_OUTPUT(support/Makefile support/cgilib/Makefile src/Makefile Makefile)

